# edgeviewer

./: readme.md
app/: build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h  native-lib.cpp
app/src/main/java/com/example/edgeviewer/: GLRenderer.kt  MainActivity.kt  NativeProcessor.kt
app/src/main/java/com/example/edgeviewer/ui/theme/: Theme.kt
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
web/: index.html  tsconfig.json
web/src/: index.ts
